# lu-parking-scraper

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_parking_scraper.sh
alembic/: env.py
alembic/versions/: 0c143aa99437_add_bike_usage.py  c128ed76c460_initial_migration.py
parking_scraper/: __main__.py  bikes.py  chargy.py  config.yml  models.py  parkings.py
