[tool.poetry]
name = "parking-scraper"
version = "0.1.1"
description = ""
authors = ["Federico Gentile <gentfede+git@gmail.com>"]
readme = "README.md"
packages = [{include = "parking_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pyyaml = "^6.0"
xmltodict = "^0.13.0"
sqlalchemy = "^2.0.9"
schedule = "^1.2.0"
alembic = "^1.10.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
